SafiUI/safi-ui/tests/compile_fail/bare_ident_prop.rs
use safi_ui::vnode;

fn main() {
    let _ = vnode! { <X size=large /> };
}
