SafiUI/safi-ui/tests/compile_fail/bare_ident_prop.stderr
error: expected string literal
 --> tests/compile_fail/bare_ident_prop.rs:4:30
  |
4 |     let _ = vnode! { <X size=large /> };
  |                              ^^^^^
